Updated readme and package.json
Updated readme and package.json

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "com.johnyloots.unityquickstartproject",
-    "version": "1.2.0",
-    "displayName": "",
-    "description": "",
+    "version": "1.0",
+    "displayName": "Unity Quick Start Project",
+    "description": "Tool for seting up a new Unity project.",
     "unity": "2018.3",
     "keywords": [
       "",
       ""
     ],
     "author": {
-      "name": "",
-      "url": "test"
+      "name": "Johny Loots",
+      "url": ""
     }
   }
